--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Fuzzer",
+            "name": "Fuzzer",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["-i", "10.10.221.19", "-p", "1337", "-s", "OVERFLOW1 ", "-a", "exploit","-c","/tmp/payload.bin","-r","018af274", "-o", "1978" ]
+            "args": ["-i", "192.168.221.44", "-p", "13327", "-s", "\\x11 setup sound ", "-a", "fuzz" ]
         },
         {
             "name": "Bad Characters",
